--- a/index.html
+++ b/index.html
@@ -25,22 +25,24 @@
 <!-- Primer pagina del curso-->
 
 <body>
-    <header class="header"> 
-        <a class="logo" href="#">WebStudio</a> 
+    <header> 
+        <div  class="header-container">
+            <a class="logo" href="#">WebStudio</a> 
 
-        <nav class="nav-container">
-            <ul>
-                <span>
-                    <li class="menu"><a class="menu-text" href="/index.html">Estudio</a></li>
-                    <li class="menu"><a class="menu-text" href="/portafolio.html">Portafolio</a></li>
-                    <li class="menu"><a class="menu-text" href="Contactos">Contactos</a></li>
-                </span>
-                <span class="direcciones">
-                    <li class="menu"><a class="contacts menu-text" id="enlaceMail" href="mailto:webstudio@example.com"> webstudio@example.com</a></li>
-                    <li class="menu"><a class="contacts menu-text" id="enlaceTel" href="tel:+5712345678">+57 1234 5678</a></li>
-                </span>
-            </ul>
-        </nav>
+            <nav class="nav-container">
+                <ul>
+                    <span>
+                        <li class="menu"><a class="menu-text" href="/index.html">Estudio</a></li>
+                        <li class="menu"><a class="menu-text" href="/portafolio.html">Portafolio</a></li>
+                        <li class="menu"><a class="menu-text" href="Contactos">Contactos</a></li>
+                    </span>
+                    <span class="direcciones">
+                        <li class="menu"><a class="contacts menu-text" id="enlaceMail" href="mailto:webstudio@example.com"> webstudio@example.com</a></li>
+                        <li class="menu"><a class="contacts menu-text" id="enlaceTel" href="tel:+5712345678">+57 1234 5678</a></li>
+                    </span>
+                </ul>
+            </nav>
+        </div>
     </header>
         
     <main id="main-content">
